--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -16,8 +16,8 @@ $primary   : #000
 $secondary : #FFF
 $accent    : #9C27B0
 
-$positive  : #21BA45
-$negative  : #C10015
+$positive  : #81c784
+$negative  : #ef5350
 $info      : #31CCEC
 $warning   : #F2C037
 
