--- a/src/css/auth.sass
+++ b/src/css/auth.sass
@@ -2,7 +2,7 @@
 
 .workspace--login.q-card
   width: 40vw
-  height: 44vh
+  height: 44vhfd
 
 @media screen and (max-width: $breakpoint-sm)
   .workspace--login.q-card
