--- a/src/css/layout.sass
+++ b/src/css/layout.sass
@@ -4,8 +4,10 @@ body
 
 .workspace
   width: 97vw
-  height: 85vh
+  height: 84vh
   margin: 1.5rem auto
+  overflow: scroll
+  overflow-x: hidden
 
 .q-field__control
   background: #fff
