--- a/src/css/movie.sass
+++ b/src/css/movie.sass
@@ -3,6 +3,7 @@
   grid-template-columns: repeat(auto-fit, minmax(340px, 1fr))
   grid-gap: 20px
   .q-card
+    max-width: 644px
     background: #fff
     display: flex
     flex-direction: column
