--- a/src/css/movie.sass
+++ b/src/css/movie.sass
@@ -2,6 +2,7 @@
   display: grid
   grid-template-columns: repeat(auto-fit, minmax(340px, 1fr))
   grid-gap: 20px
+  margin: 1rem
   .q-card
     max-width: 430px
     background: #fff
