Feat (Auth): Create test to login

--- a/src/css/auth.sass
+++ b/src/css/auth.sass
@@ -2,7 +2,13 @@
 
 .workspace--login.q-card
   width: 40vw
-  height: 44vh
+  height: 60vh
+
+@media screen and (max-width: $breakpoint-md)
+  .workspace--login.q-card
+    width: 50vw
+    height: 60vh
+
 
 @media screen and (max-width: $breakpoint-sm)
   .workspace--login.q-card
