--- a/src/css/layout.sass
+++ b/src/css/layout.sass
@@ -4,7 +4,7 @@ body
 
 .workspace
   width: 97vw
-  height: 84vh
+  height: calc(100vh - 180px)
   margin: 1.5rem auto
   overflow: scroll
   overflow-x: hidden
